--- a/lab_5_scrapper/scrapper_config.json
+++ b/lab_5_scrapper/scrapper_config.json
@@ -1,11 +1,4 @@
 {
-    "seed_urls": [],
-    "headers": {},
-    "total_articles_to_find_and_parse": 0,
-    "encoding": "",
-    "timeout": 0,
-    "should_verify_certificate": true,
-    "headless_mode": true,
     "seed_urls": ["https://usinsk.online/",
     "https://usinsk.online/mag?page2",
     "https://usinsk.online/mag?page=3",
@@ -14,5 +7,12 @@
     "https://usinsk.online/mag?page=6",
     "https://usinsk.online/mag?page=7",
     "https://usinsk.online/mag?page=8",
-    "https://usinsk.online/mag?page=9"]
+    "https://usinsk.online/mag?page=9"],
+    "headers": {},
+    "total_articles_to_find_and_parse": 8,
+    "encoding": "utf-8",
+    "timeout": 5,
+    "should_verify_certificate": true,
+    "headless_mode": true
+
 }
