--- a/lab_5_scrapper/scrapper_config.json
+++ b/lab_5_scrapper/scrapper_config.json
@@ -1,17 +1,18 @@
 {
-    "seed_urls": ["https://usinsk.online/",
-    "https://usinsk.online/mag?page2",
-    "https://usinsk.online/mag?page=3",
-    "https://usinsk.online/mag?page=4",
-    "https://usinsk.online/mag?page=5",
-    "https://usinsk.online/mag?page=6",
-    "https://usinsk.online/mag?page=7",
-    "https://usinsk.online/mag?page=8",
-    "https://usinsk.online/mag?page=9"],
+    "seed_urls": ["https://usinsk.online/page/1/",
+    "https://usinsk.online/page/2/",
+    "https://usinsk.online/page/3/",
+    "https://usinsk.online/page/4/",
+    "https://usinsk.online/page/5/",
+    "https://usinsk.online/page/6/",
+    "https://usinsk.online/page/7/",
+    "https://usinsk.online/page/8/",
+    "https://usinsk.online/page/9/",
+    "https://usinsk.online/page/10/"],
     "headers": {},
-    "total_articles_to_find_and_parse": 8,
+    "total_articles_to_find_and_parse": 100,
     "encoding": "utf-8",
-    "timeout": 5,
+    "timeout": 15,
     "should_verify_certificate": true,
     "headless_mode": true
 
